TEST_PROGRAMS/INVALID/invalid_var_assign.go
// In Go, _variables_ are explicitly declared and used by
// the compiler to e.g. check type-correctness of function
// calls.

package main

func main() {

    // Cannot declare more than one 
    var a, b int = 1, 2, 3
}

